// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-select__wrap"
    style="width: 40%;"
  >
    <div
      class="t-popup__reference t-select t-select-input t-select-input--empty"
    >
      <div
        class="t-input__wrap"
      >
        <div
          class="t-input t-is-readonly t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
        >
          <div
            class="t-input__prefix"
          />
          <input
            class="t-input__inner"
            placeholder="请选择"
            readonly=""
            type="text"
            value=""
          />
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-fake-arrow t-select__right-icon"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`collapsed.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-horizontal"
    style="gap: 16px; flex-wrap: wrap; width: 100%;"
  >
    <div
      class="t-space-item"
    >
      <div
        class="t-select__wrap"
        style="width: 40%;"
      >
        <div
          class="t-popup__reference t-select t-select-input t-select-input--multiple"
        >
          <div
            class="t-input__wrap t-tag-input t-tag-input--break-line t-tag-input__with-suffix-icon"
            value=""
          >
            <div
              class="t-input t-is-readonly t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
            >
              <div
                class="t-input__prefix"
              >
                <span
                  class="t-tag t-tag--default t-tag--dark t-tag--medium t-tag--square"
                >
                  选项一
                  <svg
                    class="t-icon t-icon-close t-tag__icon-close"
                    fill="none"
                    height="1em"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                      fill="currentColor"
                      fill-opacity="0.9"
                    />
                  </svg>
                </span>
                <span
                  class="t-tag t-tag--default t-tag--dark t-tag--medium t-tag--square"
                >
                  +1
                </span>
              </div>
              <span
                class="t-input__input-pre"
              />
              <span
                class="t-input__suffix t-input__suffix-icon"
              >
                <svg
                  class="t-fake-arrow t-select__right-icon"
                  fill="none"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                    stroke="black"
                    stroke-opacity="0.9"
                    stroke-width="1.3"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-select__wrap"
        style="width: 40%;"
      >
        <div
          class="t-popup__reference t-select t-select-input t-select-input--multiple"
        >
          <div
            class="t-input__wrap t-tag-input t-tag-input--break-line t-tag-input__with-suffix-icon"
            value=""
          >
            <div
              class="t-input t-is-readonly t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
            >
              <div
                class="t-input__prefix"
              >
                <span
                  class="t-tag t-tag--default t-tag--dark t-tag--medium t-tag--square"
                >
                  选项一
                  <svg
                    class="t-icon t-icon-close t-tag__icon-close"
                    fill="none"
                    height="1em"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                      fill="currentColor"
                      fill-opacity="0.9"
                    />
                  </svg>
                </span>
                <span
                  style="color: rgb(237, 123, 47);"
                >
                  +1
                </span>
              </div>
              <span
                class="t-input__input-pre"
              />
              <span
                class="t-input__suffix t-input__suffix-icon"
              >
                <svg
                  class="t-fake-arrow t-select__right-icon"
                  fill="none"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                    stroke="black"
                    stroke-opacity="0.9"
                    stroke-width="1.3"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`creatable.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-select__wrap"
    style="width: 40%;"
  >
    <div
      class="t-popup__reference t-select t-select-input t-select-input--empty"
    >
      <div
        class="t-input__wrap"
      >
        <div
          class="t-input t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
        >
          <div
            class="t-input__prefix"
          />
          <input
            class="t-input__inner"
            placeholder="请选择"
            type="text"
            value=""
          />
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-fake-arrow t-select__right-icon"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`custom-options.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-select__wrap"
    style="width: 80%;"
  >
    <div
      class="t-popup__reference t-select t-select-input"
    >
      <div
        class="t-input__wrap"
        value="用户一"
      >
        <div
          class="t-input t-is-readonly t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
        >
          <div
            class="t-input__prefix"
          />
          <input
            class="t-input__inner"
            placeholder="请选择"
            readonly=""
            type="text"
            value="用户一"
          />
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-fake-arrow t-select__right-icon"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`custom-selected.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-select__wrap"
    style="width: 400px;"
  >
    <div
      class="t-popup__reference t-select t-select-input t-select-input--multiple"
    >
      <div
        class="t-input__wrap t-tag-input t-tag-input--break-line t-tag-input__with-suffix-icon"
        value=""
      >
        <div
          class="t-input t-is-readonly t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
        >
          <div
            class="t-input__prefix"
          >
            <span
              class="t-tag t-tag--default t-tag--dark t-tag--medium t-tag--square"
            >
              选项一选项
            </span>
            <span
              class="t-tag t-tag--default t-tag--dark t-tag--medium t-tag--square"
            >
              选项二选项
            </span>
            <span
              class="t-tag t-tag--default t-tag--dark t-tag--medium t-tag--square"
            >
              选项三选项
            </span>
          </div>
          <span
            class="t-input__input-pre"
          />
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-fake-arrow t-select__right-icon"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`disabled.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-select__wrap"
    style="width: 40%;"
  >
    <div
      class="t-popup__reference t-select t-select-input"
    >
      <div
        class="t-input__wrap"
        value="Apple"
      >
        <div
          class="t-input t-is-readonly t-is-disabled t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
        >
          <div
            class="t-input__prefix"
          />
          <input
            class="t-input__inner"
            disabled=""
            placeholder="请选择"
            readonly=""
            type="text"
            value="Apple"
          />
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-fake-arrow t-select__right-icon"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`filterable.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-horizontal"
    style="gap: 16px; flex-wrap: wrap; width: 100%;"
  >
    <div
      class="t-space-item"
    >
      <div
        class="t-select__wrap"
        style="width: 400px; display: inline-block;"
      >
        <div
          class="t-popup__reference t-select t-select-input t-select-input--empty"
        >
          <div
            class="t-input__wrap"
          >
            <div
              class="t-input t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
            >
              <div
                class="t-input__prefix"
              />
              <input
                class="t-input__inner"
                placeholder="-请选择-"
                type="text"
                value=""
              />
              <span
                class="t-input__suffix t-input__suffix-icon"
              >
                <svg
                  class="t-fake-arrow t-select__right-icon"
                  fill="none"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                    stroke="black"
                    stroke-opacity="0.9"
                    stroke-width="1.3"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-select__wrap"
        style="width: 400px; display: inline-block;"
      >
        <div
          class="t-popup__reference t-select t-select-input t-select-input--multiple"
        >
          <div
            class="t-input__wrap t-tag-input t-tag-input--break-line t-tag-input__with-suffix-icon"
            value=""
          >
            <div
              class="t-input t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
            >
              <div
                class="t-input__prefix"
              >
                <span
                  class="t-tag t-tag--default t-tag--dark t-tag--medium t-tag--square"
                >
                  选项一
                  <svg
                    class="t-icon t-icon-close t-tag__icon-close"
                    fill="none"
                    height="1em"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                      fill="currentColor"
                      fill-opacity="0.9"
                    />
                  </svg>
                </span>
              </div>
              <input
                class="t-input__inner"
                placeholder=""
                type="text"
                value=""
              />
              <span
                class="t-input__input-pre"
              />
              <span
                class="t-input__suffix t-input__suffix-icon"
              >
                <svg
                  class="t-fake-arrow t-select__right-icon"
                  fill="none"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                    stroke="black"
                    stroke-opacity="0.9"
                    stroke-width="1.3"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`group.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-select__wrap"
    style="width: 40%;"
  >
    <div
      class="t-popup__reference t-select t-select-input t-select-input--empty"
    >
      <div
        class="t-input__wrap"
      >
        <div
          class="t-input t-is-readonly t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
        >
          <div
            class="t-input__prefix"
          />
          <input
            class="t-input__inner"
            placeholder="请选择"
            readonly=""
            type="text"
            value=""
          />
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-fake-arrow t-select__right-icon"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`keys.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-select__wrap"
    style="width: 200px; display: inline-block; margin-right: 20px;"
  >
    <div
      class="t-popup__reference t-select t-select-input"
    >
      <div
        class="t-input__wrap"
        value="已选择的选项"
      >
        <div
          class="t-input t-is-readonly t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
        >
          <div
            class="t-input__prefix"
          />
          <input
            class="t-input__inner"
            placeholder="请选择"
            readonly=""
            type="text"
            value="已选择的选项"
          />
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-fake-arrow t-select__right-icon"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="t-select__wrap"
    style="width: 200px; display: inline-block;"
  >
    <div
      class="t-popup__reference t-select t-select-input t-select-input--multiple"
    >
      <div
        class="t-input__wrap t-tag-input t-tag-input--break-line t-tag-input__with-suffix-icon"
        value=""
      >
        <div
          class="t-input t-is-readonly t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
        >
          <div
            class="t-input__prefix"
          >
            <span
              class="t-tag t-tag--default t-tag--dark t-tag--medium t-tag--square"
            >
              上海
              <svg
                class="t-icon t-icon-close t-tag__icon-close"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </span>
          </div>
          <span
            class="t-input__input-pre"
          />
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-fake-arrow t-select__right-icon"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`label-in-value.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-horizontal"
    style="gap: 16px; flex-wrap: wrap; width: 100%;"
  >
    <div
      class="t-space-item"
    >
      <div
        class="t-select__wrap"
      >
        <div
          class="t-popup__reference t-select t-select-input"
        >
          <div
            class="t-input__wrap"
            value="Apple"
          >
            <div
              class="t-input t-is-readonly t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
            >
              <div
                class="t-input__prefix"
              />
              <input
                class="t-input__inner"
                placeholder="请选择"
                readonly=""
                type="text"
                value="Apple"
              />
              <span
                class="t-input__suffix t-input__suffix-icon"
              >
                <svg
                  class="t-fake-arrow t-select__right-icon"
                  fill="none"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                    stroke="black"
                    stroke-opacity="0.9"
                    stroke-width="1.3"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-select__wrap"
      >
        <div
          class="t-popup__reference t-select t-select-input"
        >
          <div
            class="t-input__wrap"
            value="Apple"
          >
            <div
              class="t-input t-is-readonly t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
            >
              <div
                class="t-input__prefix"
              />
              <input
                class="t-input__inner"
                placeholder="请选择"
                readonly=""
                type="text"
                value="Apple"
              />
              <span
                class="t-input__suffix t-input__suffix-icon"
              >
                <svg
                  class="t-fake-arrow t-select__right-icon"
                  fill="none"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                    stroke="black"
                    stroke-opacity="0.9"
                    stroke-width="1.3"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-select__wrap"
      >
        <div
          class="t-popup__reference t-select t-select-input t-select-input--multiple"
        >
          <div
            class="t-input__wrap t-tag-input t-tag-input--break-line t-tag-input__with-suffix-icon"
            value=""
          >
            <div
              class="t-input t-is-readonly t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
            >
              <div
                class="t-input__prefix"
              >
                <span
                  class="t-tag t-tag--default t-tag--dark t-tag--medium t-tag--square"
                >
                  Apple
                  <svg
                    class="t-icon t-icon-close t-tag__icon-close"
                    fill="none"
                    height="1em"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                      fill="currentColor"
                      fill-opacity="0.9"
                    />
                  </svg>
                </span>
              </div>
              <span
                class="t-input__input-pre"
              />
              <span
                class="t-input__suffix t-input__suffix-icon"
              >
                <svg
                  class="t-fake-arrow t-select__right-icon"
                  fill="none"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                    stroke="black"
                    stroke-opacity="0.9"
                    stroke-width="1.3"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`max.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-select__wrap"
    style="width: 40%;"
  >
    <div
      class="t-popup__reference t-select t-select-input t-select-input--multiple"
    >
      <div
        class="t-input__wrap t-tag-input t-tag-input--break-line t-tag-input__with-suffix-icon"
        value=""
      >
        <div
          class="t-input t-is-readonly t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
        >
          <div
            class="t-input__prefix"
          >
            <span
              class="t-tag t-tag--default t-tag--dark t-tag--medium t-tag--square"
            >
              选项一
              <svg
                class="t-icon t-icon-close t-tag__icon-close"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </span>
          </div>
          <span
            class="t-input__input-pre"
          />
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-fake-arrow t-select__right-icon"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`multiple.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-horizontal"
    style="gap: 16px; flex-wrap: wrap; width: 100%;"
  >
    <div
      class="t-space-item"
    >
      <div
        class="t-select__wrap"
      >
        <div
          class="t-popup__reference t-select t-select-input t-select-input--multiple"
        >
          <div
            class="t-input__wrap t-tag-input t-tag-input--break-line t-tag-input__with-suffix-icon"
            value=""
          >
            <div
              class="t-input t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
            >
              <div
                class="t-input__prefix"
              >
                <span
                  class="t-tag t-tag--default t-tag--dark t-tag--medium t-tag--square"
                >
                  区块链
                  <svg
                    class="t-icon t-icon-close t-tag__icon-close"
                    fill="none"
                    height="1em"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                      fill="currentColor"
                      fill-opacity="0.9"
                    />
                  </svg>
                </span>
                <span
                  class="t-tag t-tag--default t-tag--dark t-tag--medium t-tag--square"
                >
                  人工智能
                  <svg
                    class="t-icon t-icon-close t-tag__icon-close"
                    fill="none"
                    height="1em"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                      fill="currentColor"
                      fill-opacity="0.9"
                    />
                  </svg>
                </span>
              </div>
              <input
                class="t-input__inner"
                placeholder=""
                type="text"
                value=""
              />
              <span
                class="t-input__input-pre"
              />
              <span
                class="t-input__suffix t-input__suffix-icon"
              >
                <svg
                  class="t-fake-arrow t-select__right-icon"
                  fill="none"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                    stroke="black"
                    stroke-opacity="0.9"
                    stroke-width="1.3"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <br />
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-select__wrap"
      >
        <div
          class="t-popup__reference t-select t-select-input t-select-input--multiple"
        >
          <div
            class="t-input__wrap t-tag-input t-tag-input--break-line t-tag-input__with-suffix-icon"
            value=""
          >
            <div
              class="t-input t-is-readonly t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
            >
              <div
                class="t-input__prefix"
              >
                <span
                  class="t-tag t-tag--default t-tag--dark t-tag--medium t-tag--square"
                >
                  云服务器
                  <svg
                    class="t-icon t-icon-close t-tag__icon-close"
                    fill="none"
                    height="1em"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                      fill="currentColor"
                      fill-opacity="0.9"
                    />
                  </svg>
                </span>
                <span
                  class="t-tag t-tag--default t-tag--dark t-tag--medium t-tag--square"
                >
                  云数据库
                  <svg
                    class="t-icon t-icon-close t-tag__icon-close"
                    fill="none"
                    height="1em"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                      fill="currentColor"
                      fill-opacity="0.9"
                    />
                  </svg>
                </span>
                <span
                  class="t-tag t-tag--default t-tag--dark t-tag--medium t-tag--square"
                >
                  域名注册
                  <svg
                    class="t-icon t-icon-close t-tag__icon-close"
                    fill="none"
                    height="1em"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                      fill="currentColor"
                      fill-opacity="0.9"
                    />
                  </svg>
                </span>
                <span
                  class="t-tag t-tag--default t-tag--dark t-tag--medium t-tag--square"
                >
                  网站备案
                  <svg
                    class="t-icon t-icon-close t-tag__icon-close"
                    fill="none"
                    height="1em"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                      fill="currentColor"
                      fill-opacity="0.9"
                    />
                  </svg>
                </span>
                <span
                  class="t-tag t-tag--default t-tag--dark t-tag--medium t-tag--square"
                >
                  对象存储
                  <svg
                    class="t-icon t-icon-close t-tag__icon-close"
                    fill="none"
                    height="1em"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                      fill="currentColor"
                      fill-opacity="0.9"
                    />
                  </svg>
                </span>
                <span
                  class="t-tag t-tag--default t-tag--dark t-tag--medium t-tag--square"
                >
                  低代码平台
                  <svg
                    class="t-icon t-icon-close t-tag__icon-close"
                    fill="none"
                    height="1em"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                      fill="currentColor"
                      fill-opacity="0.9"
                    />
                  </svg>
                </span>
              </div>
              <span
                class="t-input__input-pre"
              />
              <span
                class="t-input__suffix t-input__suffix-icon"
              >
                <svg
                  class="t-fake-arrow t-select__right-icon"
                  fill="none"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                    stroke="black"
                    stroke-opacity="0.9"
                    stroke-width="1.3"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`noborder.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-select__wrap"
    style="width: 40%;"
  >
    <div
      class="t-popup__reference t-select t-select-input t-select-input--borderless"
    >
      <div
        class="t-input__wrap"
        value="已选择的选项"
      >
        <div
          class="t-input t-is-readonly t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
        >
          <div
            class="t-input__prefix"
          />
          <input
            class="t-input__inner"
            placeholder="请选择"
            readonly=""
            type="text"
            value="已选择的选项"
          />
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-fake-arrow t-select__right-icon"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`options.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-select__wrap"
    style="width: 40%;"
  >
    <div
      class="t-popup__reference t-select t-select-input"
    >
      <div
        class="t-input__wrap"
        value="Apple"
      >
        <div
          class="t-input t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
        >
          <div
            class="t-input__prefix"
          />
          <input
            class="t-input__inner"
            placeholder="请选择"
            type="text"
            value="Apple"
          />
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-fake-arrow t-select__right-icon"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`panel.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-horizontal"
    style="gap: 16px;"
  >
    <div
      class="t-space-item"
    >
      <div
        class="t-select__wrap"
        style="width: 300px; margin-right: 20px;"
      >
        <div
          class="t-popup__reference t-select t-select-input t-select-input--empty"
        >
          <div
            class="t-input__wrap"
          >
            <div
              class="t-input t-is-readonly t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
            >
              <div
                class="t-input__prefix"
              />
              <input
                class="t-input__inner"
                placeholder="请选择云解决方案"
                readonly=""
                type="text"
                value=""
              />
              <span
                class="t-input__suffix t-input__suffix-icon"
              >
                <svg
                  class="t-fake-arrow t-select__right-icon"
                  fill="none"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                    stroke="black"
                    stroke-opacity="0.9"
                    stroke-width="1.3"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-select__wrap"
        style="width: 300px;"
      >
        <div
          class="t-popup__reference t-select t-select-input t-select-input--empty"
        >
          <div
            class="t-input__wrap"
          >
            <div
              class="t-input t-is-readonly t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
            >
              <div
                class="t-input__prefix"
              />
              <input
                class="t-input__inner"
                placeholder="请选择云产品"
                readonly=""
                type="text"
                value=""
              />
              <span
                class="t-input__suffix t-input__suffix-icon"
              >
                <svg
                  class="t-fake-arrow t-select__right-icon"
                  fill="none"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                    stroke="black"
                    stroke-opacity="0.9"
                    stroke-width="1.3"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`popup-props.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-select__wrap"
    style="width: 40%;"
  >
    <div
      class="t-popup__reference t-select t-select-input"
    >
      <div
        class="t-input__wrap"
        value="已选择的选项"
      >
        <div
          class="t-input t-is-readonly t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
        >
          <div
            class="t-input__prefix"
          />
          <input
            class="t-input__inner"
            placeholder="请选择"
            readonly=""
            type="text"
            value="已选择的选项"
          />
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-fake-arrow t-select__right-icon"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`prefix.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-select__wrap"
    style="width: 40%;"
  >
    <div
      class="t-popup__reference t-select t-select-input t-select-input--empty"
    >
      <div
        class="t-input__wrap"
      >
        <div
          class="t-input t-is-readonly t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
        >
          <div
            class="t-input__prefix"
          >
            <svg
              class="t-icon t-icon-browse"
              fill="none"
              height="1em"
              style="margin-right: 8px;"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M10.88 8a2.88 2.88 0 11-5.76 0 2.88 2.88 0 015.76 0zm-1 0a1.88 1.88 0 10-3.76 0 1.88 1.88 0 003.76 0z"
                fill="currentColor"
                fill-opacity="0.9"
              />
              <path
                d="M1.12 8.23A7.72 7.72 0 008 12.5c2.9 0 5.54-1.63 6.88-4.27L15 8l-.12-.23A7.73 7.73 0 008 3.5a7.74 7.74 0 00-6.88 4.27L1 8l.12.23zM8 11.5A6.73 6.73 0 012.11 8 6.73 6.73 0 0113.9 8 6.74 6.74 0 018 11.5z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
          <input
            class="t-input__inner"
            placeholder="请选择"
            readonly=""
            type="text"
            value=""
          />
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-fake-arrow t-select__right-icon"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`remote-search.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-select__wrap"
    style="width: 40%;"
  >
    <div
      class="t-popup__reference t-select t-select-input t-select-input--empty"
    >
      <div
        class="t-input__wrap"
      >
        <div
          class="t-input t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
        >
          <div
            class="t-input__prefix"
          />
          <input
            class="t-input__inner"
            placeholder="请选择"
            type="text"
            value=""
          />
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-fake-arrow t-select__right-icon"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`scroll-top.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-select__wrap"
    style="width: 200px;"
  >
    <div
      class="t-popup__reference t-select t-select-input"
    >
      <div
        class="t-input__wrap"
        value="第 50 项"
      >
        <div
          class="t-input t-is-readonly t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
        >
          <div
            class="t-input__prefix"
          />
          <input
            class="t-input__inner"
            placeholder="请选择"
            readonly=""
            type="text"
            value="第 50 项"
          />
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-fake-arrow t-select__right-icon"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`size.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-horizontal"
    style="gap: 16px; flex-wrap: wrap;"
  >
    <div
      class="t-space-item"
    >
      <div
        class="t-select__wrap"
      >
        <div
          class="t-popup__reference t-select t-select-input t-select-input--empty"
        >
          <div
            class="t-input__wrap"
          >
            <div
              class="t-input t-is-readonly t-size-s t-align-left t-is-default t-input--prefix t-input--suffix"
            >
              <div
                class="t-input__prefix"
              />
              <input
                class="t-input__inner"
                placeholder="请选择"
                readonly=""
                type="text"
                value=""
              />
              <span
                class="t-input__suffix t-input__suffix-icon"
              >
                <svg
                  class="t-fake-arrow t-select__right-icon"
                  fill="none"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                    stroke="black"
                    stroke-opacity="0.9"
                    stroke-width="1.3"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-select__wrap"
      >
        <div
          class="t-popup__reference t-select t-select-input t-select-input--empty"
        >
          <div
            class="t-input__wrap"
          >
            <div
              class="t-input t-is-readonly t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
            >
              <div
                class="t-input__prefix"
              />
              <input
                class="t-input__inner"
                placeholder="请选择"
                readonly=""
                type="text"
                value=""
              />
              <span
                class="t-input__suffix t-input__suffix-icon"
              >
                <svg
                  class="t-fake-arrow t-select__right-icon"
                  fill="none"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                    stroke="black"
                    stroke-opacity="0.9"
                    stroke-width="1.3"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-select__wrap"
      >
        <div
          class="t-popup__reference t-select t-select-input t-select-input--empty"
        >
          <div
            class="t-input__wrap"
          >
            <div
              class="t-input t-is-readonly t-size-l t-align-left t-is-default t-input--prefix t-input--suffix"
            >
              <div
                class="t-input__prefix"
              />
              <input
                class="t-input__inner"
                placeholder="请选择"
                readonly=""
                type="text"
                value=""
              />
              <span
                class="t-input__suffix t-input__suffix-icon"
              >
                <svg
                  class="t-fake-arrow t-select__right-icon"
                  fill="none"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                    stroke="black"
                    stroke-opacity="0.9"
                    stroke-width="1.3"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`status.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-horizontal"
    style="gap: 16px;"
  >
    <div
      class="t-space-item"
    >
      <div
        class="t-select__wrap"
      >
        <div
          class="t-popup__reference t-select t-select-input t-select-input--empty"
        >
          <div
            class="t-input__wrap"
          >
            <div
              class="t-input t-is-readonly t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
            >
              <div
                class="t-input__prefix"
              />
              <input
                class="t-input__inner"
                placeholder="请选择"
                readonly=""
                type="text"
                value=""
              />
              <span
                class="t-input__suffix t-input__suffix-icon"
              >
                <svg
                  class="t-fake-arrow t-select__right-icon"
                  fill="none"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                    stroke="black"
                    stroke-opacity="0.9"
                    stroke-width="1.3"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-select__wrap"
      >
        <div
          class="t-popup__reference t-select t-select-input t-select-input--empty"
        >
          <div
            class="t-input__wrap"
          >
            <div
              class="t-input t-is-readonly t-is-disabled t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
            >
              <div
                class="t-input__prefix"
              />
              <input
                class="t-input__inner"
                disabled=""
                placeholder="请选择"
                readonly=""
                type="text"
                value=""
              />
              <span
                class="t-input__suffix t-input__suffix-icon"
              >
                <svg
                  class="t-fake-arrow t-select__right-icon"
                  fill="none"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                    stroke="black"
                    stroke-opacity="0.9"
                    stroke-width="1.3"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-select__wrap"
      >
        <div
          class="t-popup__reference t-select t-select-input t-select-input--empty"
        >
          <div
            class="t-input__wrap"
          >
            <div
              class="t-input t-is-readonly t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
            >
              <div
                class="t-input__prefix"
              />
              <input
                class="t-input__inner"
                placeholder="请选择"
                readonly=""
                type="text"
                value=""
              />
              <span
                class="t-input__suffix t-input__suffix-icon"
              >
                <div
                  class="t-loading t-loading--center t-size-s t-select__right-icon t-select__active-icon"
                >
                  <svg
                    class="t-loading__gradient t-icon-loading"
                    height="1em"
                    version="1.1"
                    viewBox="0 0 14 14"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <foreignobject
                      height="12"
                      width="12"
                      x="1"
                      y="1"
                    >
                      <div
                        class="t-loading__gradient-conic"
                      />
                    </foreignobject>
                  </svg>
                </div>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
